# ai-agent

./: .env.example.py  README.md  main.py  package.json  pyproject.toml  requirements.txt
ai_agent_py/: main.py
ai_agent_py/src/: ai_agent.py
ai_agent_py/src/components/: input_refinement.py  query_generator.py  query_selector.py  table_selector.py
ai_agent_py/src/utils/: ollama_client.py
src/: aiAgent.js  ai_agent.py  index.js
src/components/: inputRefinement.js  input_refinement.py  queryGenerator.js  querySelector.js  query_generator.py  query_selector.py  tableSelector.js  table_selector.py
src/utils/: ollama.js  ollama_client.py
